# rayspace.dev

./: .env.example  .gitattributes  .gitignore  Cargo.toml  readme.md
assets/: index.html
assets/images/: profile.avif  profile2.avif
assets/pages/: 404.html  about.html  blog.html  guestbook.html  home.html  resume.html
assets/posts/: 1.html  template.html
assets/scripts/: highlight.min.js  script.js
assets/styles/: highlight.css  style.css
src/: auth.rs  main.rs  services.rs  state.rs
