[package]
name = "rayspace_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
anyhow = "1.0.71"
dotenv = "0.15.0"
oauth2 = "4.1.0"
url = "2.2.2"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
actix-session = "0.5.0"
actix-rt = "2.2.0"
reqwest = { version = "0.11", features = ["json"] }
hex = "0.4.3"
sqlx = { version = "0.6.3", features = ["chrono", "runtime-async-std-native-tls", "postgres"] }
chrono = { version = "0.4.26", features = ["serde"] }
ammonia = "3.3.0"
env_logger = "0.9"
log = "0.4"